# bevy_prfb

./: .gitignore  CREDITS.md  Cargo.toml  README.md
assets/prefab/: custom_prefab.ron  prefab_with_parents.ron
assets/ui/: custom_ui.ron  menu.ron
examples/: custom_prefab.rs  prefab_with_parents.rs
examples/ui/: custom_ui.rs  simple_screen_prefab.rs
src/: lib.rs  prefab.rs  ui.rs
src/bevy_prfb_macro/: Cargo.toml
src/bevy_prfb_macro/src/: lib.rs
src/components/: a11y.rs  mod.rs  sprite.rs  ui.rs
