[package]
name = "bevy_prfb_macro"
version = "0.12.1"
edition = "2021"


[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = "2.0.43"
